src/test/ui/higher-rank-trait-bounds/normalize-under-binder/issue-71955.nll.stderr
error[E0308]: mismatched types
  --> $DIR/issue-71955.rs:49:5
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r, 's> FnOnce<(&'r &'s str,)>`
              found type `for<'r> FnOnce<(&'r &str,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-71955.rs:49:24
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |                        ^^^^^^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-71955.rs:29:9
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-71955.rs:49:5
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&&str,)>`
              found type `for<'r> FnOnce<(&'r &str,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-71955.rs:49:24
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |                        ^^^^^^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-71955.rs:29:44
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |                                            ^^^^

error[E0308]: mismatched types
  --> $DIR/issue-71955.rs:53:5
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r, 's> FnOnce<(&'r Wrapper<'s>,)>`
              found type `for<'r> FnOnce<(&'r Wrapper<'_>,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-71955.rs:53:24
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |                        ^^^^^^^^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-71955.rs:29:9
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-71955.rs:53:5
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&Wrapper<'_>,)>`
              found type `for<'r> FnOnce<(&'r Wrapper<'_>,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-71955.rs:53:24
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |                        ^^^^^^^^^^^^^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-71955.rs:29:44
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |                                            ^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
